--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "type": "module",
   "scripts": {
     "clear": "rimraf dist .cache",
-    "server": "tsc-watch -b ./packages/server/tsconfig.package.json --verbose --onSuccess \"node --import=./loader/index.mjs ./dist/server/main.js\"",
-    "start": "node --import=./loader/index.mjs ./dist/server/main.js"
+    "server": "tsc-watch -b ./packages/server/tsconfig.package.json --verbose --onSuccess \"node --import=./loader/index.mjs --expose-internals ./dist/server/main.js\"",
+    "start": "node --import=./loader/index.mjs ./dist/server/main.js",
+    "update-workspace-deps": "tsx ./tools/actions/update-deps.ts"
   },
   "keywords": [],
   "author": "",
@@ -28,7 +29,9 @@
     "@hono/zod-openapi": "0.16.4",
     "@hono/zod-validator": "0.4.1",
     "@scalar/hono-api-reference": "0.5.159",
+    "@types/source-map-support": "0.5.10",
     "figlet": "1.8.0",
+    "source-map-support": "0.5.21",
     "tslib": "2.8.1",
     "zod": "3.23.8"
   }
