--- a/packages/server/tsconfig.package.json
+++ b/packages/server/tsconfig.package.json
@@ -17,5 +17,13 @@
 		{
 			"path": "../common/tsconfig.package.json"
 		}
-	]
+	],
+	"scripts": {
+		"dev": [
+			"tsc-watch",
+			"-b ./packages/server/tsconfig.package.json",
+			"--verbose",
+			"--onSuccess \"node --import=./loader/index.mjs --expose-internals ./dist/server/main.js\""
+		]
+	}
 }
