--- a/package.json
+++ b/package.json
@@ -14,23 +14,31 @@
 	"description": "",
 	"devDependencies": {
 		"@types/figlet": "1.7.0",
-		"@types/node": "22.9.3",
+		"@types/node": "22.10.1",
+		"@types/react": "18.3.12",
+		"@types/react-dom": "18.3.1",
+		"@vitejs/plugin-react": "4.3.4",
 		"enhanced-resolve": "5.17.1",
+		"globals": "15.13.0",
 		"gradient-string": "3.0.0",
 		"minimatch": "10.0.1",
 		"rimraf": "6.0.1",
 		"tsc-watch": "6.2.1",
 		"tsx": "4.19.2",
-		"typescript": "5.7.2"
+		"typescript": "5.7.2",
+		"vite": "6.0.2",
+		"vite-tsconfig-paths": "5.1.3"
 	},
 	"dependencies": {
 		"@hono/node-server": "1.13.7",
-		"@hono/swagger-ui": "0.4.1",
-		"@hono/zod-openapi": "0.18.0",
+		"@hono/swagger-ui": "0.5.0",
+		"@hono/zod-openapi": "0.18.3",
 		"@hono/zod-validator": "0.4.1",
-		"@scalar/hono-api-reference": "0.5.161",
+		"@scalar/hono-api-reference": "0.5.162",
 		"@types/source-map-support": "0.5.10",
 		"figlet": "1.8.0",
+		"react": "18.3.1",
+		"react-dom": "18.3.1",
 		"source-map-support": "0.5.21",
 		"tslib": "2.8.1",
 		"zod": "3.23.8"
