--- a/package.json
+++ b/package.json
@@ -14,34 +14,35 @@
 	"description": "",
 	"devDependencies": {
 		"@types/figlet": "1.7.0",
-		"@types/node": "22.10.1",
-		"@types/react": "18.3.12",
-		"@types/react-dom": "18.3.1",
-		"@vitejs/plugin-react": "4.3.4",
-		"enhanced-resolve": "5.17.1",
-		"globals": "15.13.0",
+		"@types/node": "24.7.2",
+		"@types/react": "19.2.2",
+		"@types/react-dom": "19.2.2",
+		"@typescript/native-preview": "7.0.0-dev.20250523.1",
+		"@vitejs/plugin-react": "5.0.4",
+		"enhanced-resolve": "5.18.3",
+		"globals": "16.4.0",
 		"gradient-string": "3.0.0",
-		"minimatch": "10.0.1",
+		"minimatch": "10.0.3",
 		"rimraf": "6.0.1",
-		"tsc-watch": "6.2.1",
-		"tsx": "4.19.2",
-		"typescript": "5.7.2",
-		"vite": "6.0.2",
-		"vite-tsconfig-paths": "5.1.3",
+		"tsc-watch": "7.2.0",
+		"tsx": "4.20.6",
+		"typescript": "5.9.3",
+		"vite": "7.1.10",
+		"vite-tsconfig-paths": "5.1.4",
 		"watcher": "2.3.1"
 	},
 	"dependencies": {
-		"@hono/node-server": "1.13.7",
-		"@hono/swagger-ui": "0.5.0",
-		"@hono/zod-openapi": "0.18.3",
-		"@hono/zod-validator": "0.4.1",
-		"@scalar/hono-api-reference": "0.5.162",
+		"@hono/node-server": "1.19.5",
+		"@hono/swagger-ui": "0.5.2",
+		"@hono/zod-openapi": "1.1.3",
+		"@hono/zod-validator": "0.7.4",
+		"@scalar/hono-api-reference": "0.9.22",
 		"@types/source-map-support": "0.5.10",
-		"figlet": "1.8.0",
-		"react": "18.3.1",
-		"react-dom": "18.3.1",
+		"figlet": "1.9.3",
+		"react": "19.2.0",
+		"react-dom": "19.2.0",
 		"source-map-support": "0.5.21",
 		"tslib": "2.8.1",
-		"zod": "3.23.8"
+		"zod": "4.1.12"
 	}
 }
