--- a/packages/server/tsconfig.package.json
+++ b/packages/server/tsconfig.package.json
@@ -1,32 +1,32 @@
 {
-    "extends": "../../tsconfig.base.json",
-    "compilerOptions": {
-        "outDir": "../../dist/server",
-        "rootDir": "./src",
-        "tsBuildInfoFile": "../../.cache/server.tsbuildinfo",
-        "composite": true
-    },
-    "include": [
-        "src"
-    ],
-    "exclude": [
-        "test",
-        "lib"
-    ],
-    "references": [
-        {
-            "path": "../common/tsconfig.package.json"
-        }
-    ],
-    "scripts": {
-        "dev": {
-            "command": "npm",
-            "args": [
-                "run",
-                "dev-watch",
-                "--",
-                "server"
-            ]
-        }
-    }
+	"extends": "../../tsconfig.base.json",
+	"compilerOptions": {
+		"outDir": "../../.cache/server",
+		"rootDir": "./src",
+		"tsBuildInfoFile": "../../.cache/server.tsbuildinfo",
+		"composite": true
+	},
+	"include": [
+		"src"
+	],
+	"exclude": [
+		"test",
+		"lib"
+	],
+	"scripts": {
+		"dev": {
+			"command": "node",
+			"args": [
+				"--import=../../loader/index.mjs",
+				"--watch-path",
+				"../",
+				"./src/main.ts"
+			]
+		}
+	},
+	"references": [
+		{
+			"path": "../common/tsconfig.package.json"
+		}
+	]
 }
