refactor: update TypeScript configurations and improve error handling in dev script

--- a/packages/server/tsconfig.package.json
+++ b/packages/server/tsconfig.package.json
@@ -18,6 +18,7 @@
 			"command": "node",
 			"args": [
 				"--import=../../loader/index.mjs",
+				"--experimental-transform-types",
 				"--watch-path",
 				"../",
 				"./src/main.ts"
