--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"target": "ES2023",
+		"target": "es2024",
 		"module": "ESNext",
 		"moduleResolution": "Node",
 		"useDefineForClassFields": true,
