--- a/package.json
+++ b/package.json
@@ -31,12 +31,8 @@
 		"watcher": "2.3.1"
 	},
 	"dependencies": {
-		"@hono/node-server": "1.19.5",
-		"@hono/swagger-ui": "0.5.2",
-		"@hono/zod-openapi": "1.1.4",
-		"@hono/zod-validator": "0.7.4",
-		"@scalar/hono-api-reference": "0.9.22",
 		"@types/source-map-support": "0.5.10",
+		"consola": "3.4.2",
 		"figlet": "1.9.3",
 		"react": "19.2.0",
 		"react-dom": "19.2.0",
