--- a/packages/server/tsconfig.package.json
+++ b/packages/server/tsconfig.package.json
@@ -1,33 +1,33 @@
 {
-	"extends": "../../tsconfig.base.json",
-	"compilerOptions": {
-		"outDir": "../../.cache/server",
-		"rootDir": "./src",
-		"tsBuildInfoFile": "../../.cache/server.tsbuildinfo",
-		"composite": true
-	},
-	"include": [
-		"src"
-	],
-	"exclude": [
-		"test",
-		"lib"
-	],
-	"scripts": {
-		"dev": {
-			"command": "node",
-			"args": [
-				"--import=../../loader/index.mjs",
-				"--experimental-transform-types",
-				"--watch-path",
-				"../",
-				"./src/main.ts"
-			]
-		}
-	},
-	"references": [
-		{
-			"path": "../common/tsconfig.package.json"
-		}
-	]
+    "extends": "../../tsconfig.base.json",
+    "compilerOptions": {
+        "outDir": "../../.cache/server",
+        "rootDir": "./src",
+        "tsBuildInfoFile": "../../.cache/server.tsbuildinfo",
+        "composite": true
+    },
+    "include": [
+        "src"
+    ],
+    "exclude": [
+        "test",
+        "lib"
+    ],
+    "scripts": {
+        "dev": {
+            "command": "node",
+            "args": [
+                "--import=../../loader/index.mjs",
+                "--experimental-transform-types",
+                "--watch-path",
+                "../",
+                "./src/main.ts"
+            ]
+        }
+    },
+    "references": [
+        {
+            "path": "../server-framework/tsconfig.package.json"
+        }
+    ]
 }
