--- a/package.json
+++ b/package.json
@@ -18,17 +18,13 @@
 		"@types/react": "19.2.2",
 		"@types/react-dom": "19.2.2",
 		"@vitejs/plugin-react": "5.0.4",
-		"enhanced-resolve": "5.18.3",
 		"globals": "16.4.0",
 		"gradient-string": "3.0.0",
-		"minimatch": "10.0.3",
 		"rimraf": "6.0.1",
-		"tsc-watch": "7.2.0",
 		"tsx": "4.20.6",
 		"typescript": "5.9.3",
 		"vite": "7.1.10",
-		"vite-tsconfig-paths": "5.1.4",
-		"watcher": "2.3.1"
+		"vite-tsconfig-paths": "5.1.4"
 	},
 	"dependencies": {
 		"@types/source-map-support": "0.5.10",
