feat: enhance TypeScript configurations and improve path handling across multiple files

--- a/packages/front/tsconfig.package.json
+++ b/packages/front/tsconfig.package.json
@@ -3,7 +3,7 @@
     "files": [],
     "references": [
         {
-            "path": "../common/tsconfig.package.json"
+            "path": "..\\common\\tsconfig.package.json"
         }
     ],
     "scripts": {
