chore: update dependencies and refactor server initialization
- Updated @types/node from 24.8.1 to 24.9.1
- Updated vite from 7.1.10 to 7.1.11
- Added new dependencies: camelcase-keys, fullscreen-ink, ink, jsonriver, snakecase-keys, tslog
- Refactored server initialization in main.ts to use createServer from http
- Updated tsconfig.package.json to use index.ts instead of index.mjs for loader
- Removed pre-dev.ts as it is no longer needed
- Fixed import path in update-deps.ts
- Removed unused compiler.ts
- Enhanced updateReferences function in utils.ts to support deep project reference updates

--- a/packages/server/tsconfig.package.json
+++ b/packages/server/tsconfig.package.json
@@ -17,7 +17,7 @@
         "dev": {
             "command": "node",
             "args": [
-                "--import=../../loader/index.mjs?mode=dev",
+                "--import=../../loader/index.ts?mode=dev",
                 "--experimental-transform-types",
                 "--disable-warning=ExperimentalWarning",
                 "--watch-path",
@@ -28,12 +28,16 @@
         "start": {
             "command": "node",
             "args": [
-                "--import=../../loader/index.mjs",
+                "--import=../../loader/index.ts",
                 "--experimental-transform-types",
                 "--disable-warning=ExperimentalWarning",
                 "./src/main.ts"
             ]
         }
     },
-    "references": []
+    "references": [
+        {
+            "path": "..\\common\\tsconfig.package.json"
+        }
+    ]
 }
