--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	"description": "",
 	"devDependencies": {
 		"@types/figlet": "1.7.0",
-		"@types/node": "24.8.1",
+		"@types/node": "24.9.1",
 		"@types/react": "19.2.2",
 		"@types/react-dom": "19.2.2",
 		"@vitejs/plugin-react": "5.0.4",
@@ -23,17 +23,23 @@
 		"rimraf": "6.0.1",
 		"tsx": "4.20.6",
 		"typescript": "5.9.3",
-		"vite": "7.1.10",
+		"vite": "7.1.11",
 		"vite-tsconfig-paths": "5.1.4"
 	},
 	"dependencies": {
 		"@types/source-map-support": "0.5.10",
+		"camelcase-keys": "10.0.0",
 		"consola": "3.4.2",
 		"figlet": "1.9.3",
+		"fullscreen-ink": "0.1.0",
+		"ink": "6.3.1",
+		"jsonriver": "1.0.2",
 		"react": "19.2.0",
 		"react-dom": "19.2.0",
+		"snakecase-keys": "9.0.2",
 		"source-map-support": "0.5.21",
 		"tslib": "2.8.1",
+		"tslog": "4.10.2",
 		"zod": "4.1.12"
 	}
 }
