--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"camelcase-keys": "10.0.0",
 		"figlet": "1.9.3",
 		"jsonriver": "1.0.2",
+		"ora": "9.0.0",
 		"react": "19.2.0",
 		"react-dom": "19.2.0",
 		"snakecase-keys": "9.0.2",
