--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
 	"scripts": {
 		"clear": "rimraf dist .cache",
 		"dev": "tsx ./tools/actions/run-script.ts",
-		"update-workspace-deps": "tsx ./tools/actions/update-deps.ts",
-		"dev-watch": "tsx ./tools/actions/watch-update-deps.ts"
+		"update-workspace-deps": "tsx ./tools/actions/update-deps.ts"
 	},
 	"keywords": [],
 	"author": "",
@@ -17,20 +16,20 @@
 		"@types/node": "24.9.1",
 		"@types/react": "19.2.2",
 		"@types/react-dom": "19.2.2",
-		"@vitejs/plugin-react": "5.0.4",
+		"@vitejs/plugin-react": "5.1.0",
 		"globals": "16.4.0",
 		"gradient-string": "3.0.0",
 		"inquirer": "12.10.0",
 		"rimraf": "6.0.1",
 		"tsx": "4.20.6",
 		"typescript": "5.9.3",
-		"vite": "7.1.11",
+		"vite": "7.1.12",
 		"vite-tsconfig-paths": "5.1.4"
 	},
 	"dependencies": {
 		"camelcase-keys": "10.0.0",
 		"figlet": "1.9.3",
-		"jsonriver": "1.0.2",
+		"jsonriver": "1.0.3",
 		"ora": "9.0.0",
 		"react": "19.2.0",
 		"react-dom": "19.2.0",
